k8s/03-apps/jenkins/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-svc
  namespace: rt
spec:
  selector:
    app: jenkins
  ports:
    - name: jenkins
      port: 80
      protocol: TCP
      targetPort: 8080
